@@ -1,3 +1,8 @@
+2023-09-13  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/anytime.cpp (convertToTime): Warn if NA values resulting from
+	conversion to character (and only one warning will be give)
+
 2023-09-09  Dirk Eddelbuettel  <edd@debian.org>
 
 	* tests/tinytest.R: Simplified
